# Obs-VtsTransparencyFilter

./: LICENSE.md  README.md
obs-27.2.4/: BUILD.md  BUILD_FIXES.md
obs-27.2.4/vts-transparency-filter/: CMakeLists.txt  transparency-filter.c
obs-upstream/: BUILD.md
obs-upstream/vts-transparency-filter/: CMakeLists.txt  transparency-filter.c
obs-upstream/vts-transparency-filter/data/: vts_transparency_filter.effect
obs-upstream/vts-transparency-filter/data/locale/: en-US.ini
